<resources>
    <string name="app_name">Erooja</string>

    <string name="default_notification_channel_id">dlfnwkghkdlxld</string>

    <string name="nav_main">메인</string>
    <string name="nav_search">탐색</string>
    <string name="nav_my_page">MY</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="onboarding2_title">목표를 함께 달성하세요</string>
    <string name="onboarding2_content">목표를 함께 이뤄보세요. 함께 달성할 \n누군가 있다는 건 참 든든한 일이에요.</string>
    <string name="onboarding_content1">이루자에서만 만나볼 수 있는\n 목표 리스트를 이용해보세요!</string>
    <string name="onboarding_title1">목표 템플릿을 이용해보세요</string>
    <string name="onboard_title3">나의 달성률을 확인하세요</string>
    <string name="onboard_content3">달성률을 확인함으로써 목표를 이루는데\n동기를 부여받을 수 있어요!</string>


    <!--> 공란이 필요함 <-->
    <string name="temp_txt"> </string>

    <string name="add_goal_list">리스트 직접 추가하기</string>
    <string name="scrap">담아가기</string>
    <string name="more">더보기</string>
    <string name="close">닫기</string>
    <string name="start_guest">게스트로 시작하기</string>
    <string name="next">다음</string>
    <string name="please_input_nickname">닉네임을 입력하세요.</string>
    <string name="nickname_max_info">한글 2자 이상~5자 이내</string>
    <string name="already_using_nickname">이미 사용 중인 닉네임입니다.</string>
    <string name="nickname_rule_info">2~5자 한글로 공백없이 입력해주세요.</string>
    <string name="please_select_job_group">관심있는 직군을 골라주세요.</string>
    <string name="group_development">개발 직군</string>
    <string name="group_design">디자인 직군</string>
    <string name="please_select_job_class">직무도 함께 골라주세요.</string>
    <string name="job_class_select_info">직무는 추후에 변경 가능합니다.</string>
    <string name="participants_list_title">참여자 리스트</string>
    <string name="starter_text">Starter</string>
    <string name="filter_text">필터</string>
    <string name="complete_text">완료</string>
    <string name="development_text">개발</string>
    <string name="design_text">디자인</string>
    <string name="reset_text">초기화</string>
    <string name="job_class">직무</string>
    <string name="job_group">직군</string>
    <string name="job_goal">목표</string>
    <string name="please_enter_search_input">검색어를 입력해주세요.</string>
    <string name="please_search_job_class">직무와 관련된 내용을 검색해보세요.</string>
    <string name="please_search_job_goal">목표와 관련된 내용을 검색해보세요.</string>
    <string name="search_no_content">해당되는 내용이 없습니다.</string>
    <string name="search_no_goal_list">등록된 목표가 없습니다.</string>
    <string name="search_goal">목표 탐색</string>
    <string name="newGoal_title">어떤 목표를 달성하려고 하세요?</string>
    <string name="edit_goal">목표명을 입력해 주세요.</string>
    <string name="goal_detail_question">어떤 목표인지\n조금 더 자세히 설명해주시겠어요?</string>
    <string name="goal_detail_content">이 목표는 애프터이펙트/모션그래픽 역량 \n함양을 위한 단기간 영상 제작 프로젝트입니다. \n간단한 모션 제작을 통해 ~하려 합니다. \n(내용 생략 가능)</string>
    <string name="startDate">시작</string>
    <string name="endDate">종료</string>
    <string name="period">기간</string>
    <string name="isPeriodModifiable">수정 가능</string>
    <string name="changeable_text">다른 참여자가 자신의 목표 기간을 자유롭게 설정할 수 있나요?</string>
    <string name="end_date_content"><u>YYYY년 MM월 DD일</u></string>
    <string name="changeable">네</string>
    <string name="unchangeable">아니오</string>
    <string name="goal_item_hint">리스트의 내용을 입력해주세요.</string>
    <string name="goal_list_title">목표 기간 내 달성할 리스트를\n만들어보세요.</string>
    <string name="goal_title_warning">목표명을 5자 이상 입력해주세요</string>
    <string name="goal_period_title">목표 기간을 설정해주세요.</string>
    <string name="insert_content">리스트의 내용을 입력해주세요.</string>
    <string name="goal_list_size_error">1개 이상의 리스트를 추가해주세요.</string>
    <string name="goal_title_string">애프터이펙트 익스프레션 예제 연습</string>
    <string name="navigate_to_goal">목표로 이동하기</string>
    <string name="new_goal_is_starting">새로운 목표가 시작되었습니다!</string>
    <string name="participated_goal_text">참여중인 목표</string>
    <string name="new_goal_search_text">새로운 목표 탐색하기</string>

    <string name="back_button_click">한번 더 뒤로가기를 누르시면 종료됩니다</string>
    <string name="goal_contain_job_question">어떤 직무와 관련된 목표인가요?</string>
    <string name="duplicated_is_ok_text">*중복 선택 가능</string>
    <string name="lookup_new_goal">새로운 목표 둘러보기</string>
    <string name="no_participated_goal_please_add_goal_text">참여중인 목표가 없습니다.\n새로운 목표를 추가해보세요.</string>
    <string name="add_goal_button_text">목표 추가</string>
    <string name="confirm_text">확인</string>
    <string name="cancel_text">취소</string>
    <string name="new_goal_add_text">새로운 목표 추가</string>
    <string name="no_goal_interested_job_plz_add_goal">관심 직무와 관련된 목표가 아직 없네요.\n새로운 목표를 추가해보세요.</string>

    <string name="setting">설정</string>
    <string name="alarm_setting">알람 설정</string>
    <string name="profile_picture_change">프로필 사진 변경</string>
    <string name="job_class_change">관심 직무 변경</string>
    <string name="help">도움말</string>
    <string name="opensource_license">오픈소스 라이선스</string>
    <string name="terms_of_service">이용약관</string>
    <string name="private_info">개인정보 처리방침</string>
    <string name="logout">로그아웃</string>

    <string name="change_profile"><u>사진 변경하기</u></string>
    <string name="save_txt">저장</string>
    <string name="list_edit_text">리스트 수정</string>
    <string name="edit_complete_text">변경 완료</string>
    <string name="connected_job">관련 직무</string>
    <string name="no_content_text">등록된 목표가 없습니다.</string>
    <string name="change_nickname">닉네임 변경</string>
    <string name="goal_edit_text">목표 수정</string>

    <string name="end_alarm_notice">종료된 목표 알림</string>
    <string name="notification_text">알림</string>
    <string name="no_notification_text">알림이 존재하지 않습니다.</string>
    <string name="end_goal_noti_text">목표가 종료되었습니다.</string>
    <string name="pull_to_refresh_text">서버 네트워크가 원활하지 않습니다.\n아래로 당겨 새로고침 해주세요.</string>
    <string name="add_goal_period_notification">한번 설정한 기간은 수정이 불가능합니다.</string>


</resources>
