<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="search"
            type="com.eroom.erooja.feature.search.searchpage.SearchFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_navi_arrow_left" />

            <EditText
                android:id="@+id/search_edit_text"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13sp"
                android:background="@null"
                android:hint="@string/please_enter_search_input"
                android:textSize="14sp" />


        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/search_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/position_tabitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_class" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/goal_tabitem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_goal" />

        </com.google.android.material.tabs.TabLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>