<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="fragment"
            type="com.eroom.erooja.feature.signup.page.jobclass.JobClassFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.signup.page.jobclass.JobClassFragment">

        <TextView
            android:id="@+id/jobClassInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_select_job_class"
            android:textColor="@color/grey7"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091" />

        <TextView
            android:id="@+id/jobClassSubInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_class_select_info"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobClassInfo"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/classRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="63dp"
            android:layout_marginEnd="63dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobClassSubInfo"
            app:layout_constraintVertical_bias="0.194"
            tools:itemCount="5"
            tools:listitem="@layout/item_job_class_button" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> fragment.nextButtonClicked()}"
            android:padding="16dp"
            android:textSize="16sp"
            android:text="@string/next"
            android:textColor="@{fragment.classCheck ? @color/colorWhite : @color/grey5}"
            android:background="@{fragment.classCheck ? @color/orgDefault : @color/grey2}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>