<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="fragment"
            type="com.eroom.erooja.app.feature.addGoal.newGoalPage.GoalTitleFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.feature.addGoal.newGoalPage.GoalTitleFragment"
        android:onClick="@{() -> fragment.onLayoutClicked()}">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="11sp"
            android:text="@string/newGoal_title"
            android:textColor="@color/grey8"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06"
            />

        <EditText
            android:id="@+id/goalTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@{fragment.zeroText ? @color/grey3 : @color/orgDefault}"
            android:foregroundTint="@color/grey3"
            android:hint="@string/edit_goal"
            android:lines="1"
            android:maxLength="50"
            android:paddingBottom="20dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textCursorDrawable="@drawable/edit_text_cursor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintStart_toStartOf="@+id/question"
            app:layout_constraintTop_toBottomOf="@+id/question" />

        <TextView
            android:id="@+id/goalTitleLengthError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/goal_title_warning"
            android:textColor="@color/colorError"
            android:textSize="13sp"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toStartOf="@+id/goalTitle"
            app:layout_constraintTop_toBottomOf="@+id/goalTitle" />

        <TextView
            android:id="@+id/goal_title_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="0/50"
            android:textColor="@color/grey4"
            android:textSize="13sp"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/goalTitleLengthError"
            app:layout_constraintTop_toBottomOf="@+id/goalTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>